test/resources/inspections/latex/filenotfound/subfilestest/subdir/onedown.tex
\documentclass[../main.tex]{subfiles}

\begin{document}
    Inclusions should be relative to this file, not to the main file.
    \subfile{subsubdir/twodown.tex}
    \subfile{<error descr="File 'subdir/subsubdir/twodown.tex' not found">subdir/subsubdir/twodown.tex</error>}
\end{document}